fixed form gap

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -347,6 +347,7 @@ footer {
     .group-items {
       display: flex;
       flex-direction: column;
+      gap: 0;
     }
 
     .flex-items {
@@ -390,7 +391,7 @@ footer {
 @media (min-width: 970px) {
   #header-section {
     .header-content p {
-      padding: 4rem 20rem;
+      padding: 4rem 10rem;
     }
   }
 }
